--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "@giscus/react": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "gatsby": "^5.11.0",
+    "gatsby": "4.25.0",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-catch-links": "^5.11.0",
-    "gatsby-plugin-feed": "^5.11.0",
+    "gatsby-plugin-catch-links": "4.25.0",
+    "gatsby-plugin-feed": "4.25.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-manifest": "4.25.0",
     "gatsby-plugin-offline": "^6.11.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "gatsby-plugin-react-redux": "^1.1.0",
     "gatsby-plugin-resolve-src": "^2.1.0",
-    "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-sitemap": "^6.11.0",
-    "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-plugin-robots-txt": "1.8.0",
+    "gatsby-plugin-sharp": "4.25.1",
+    "gatsby-plugin-sitemap": "5.25.0",
+    "gatsby-plugin-styled-components": "5.25.0",
     "gatsby-remark-autolink-headers": "^6.13.1",
     "gatsby-remark-footnotes": "^0.0.8",
-    "gatsby-remark-images": "^7.11.0",
+    "gatsby-remark-images": "6.25.0",
     "gatsby-remark-katex": "^3.5.0",
     "gatsby-remark-prismjs": "^7.11.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-static-images": "^1.2.1",
-    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-source-filesystem": "4.25.0",
     "gatsby-transformer-remark": "^2.10.0",
-    "gatsby-transformer-sharp": "^5.11.0",
+    "gatsby-transformer-sharp": "4.25.0",
     "katex": "^0.12.0",
     "lodash": "^4.17.21",
     "minipass": "6.0.2",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-md-spinner": "^1.0.0",
